css/home.css
/* Styling of content on index.html */

.banner-carousel-container {
    width: 100%;
    height: 320px;
    position: relative;
    overflow: hidden;
}

.banner-image-container { 
    width: 100%;
    height: 320px;
    background: rgba(0, 0, 0, 0.30);
}

.banner-image-container img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.banner-dots {
    text-align: center;
}

.banner-images {
    display: none;
    position: absolute;
    width: 100%;
    height: 100%;
    position: relative;
}

.banner-image-overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.40);
}

.banner-prev, .banner-next {             
    cursor: pointer;
    position: absolute;
    top: 50%;
    width: auto;
    margin: -22px 16px 0 16px;
    padding: 10px 12px;
    color: var(--color-primary);
    font-weight: bold;
    font-size: 26px;
    transition: 0.6s ease;
    border-radius: 0 3px 3px 0;
    user-select: none; 
    background-color: rgba(0,0,0,0.5); 
}

.banner-next { 
    right: 0;
    border-radius: 3px 0 0 3px;
    color: #FFF;
}

.banner-prev:hover, .banner-next:hover {
    background-color: rgba(0,0,0,0.8);
}

.banner-text {
    position: absolute;
    bottom: 110px;
    width: 70%; 
    padding: 0 15%;
    left: 50%;
    transform: translateX(-50%);
}

.banner-text h2 {
    color: var(--color-primary);
    font-size: 22px;
    text-align: center;
    font-weight: 500;
}

.dots-container {
    position: absolute;
    bottom: 0;
    text-align: center;
    width: 100%;
}

.banner-dots {
    text-align: center;
    width: 100%;
}

.dot {
    cursor: pointer;
    height: 15px;
    width: 15px;
    margin: 10px 2px;
    background-color: #bbb;
    border-radius: 50%;
    display: inline-block;
    transition: background-color 0.6s ease;
}

.active, .dot:hover {
    background-color: #717171;
}

.fade {
    animation-name: fade;
    animation-duration: 1.5s;
}

@keyframes fade {
    from {opacity: .4;}
    to {opacity: 1;}
}

.logo {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 30px;
}

.logo img {
    width: 45px;
    height: 45px;
}

.blog-name-info {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin: 0 var(--margin-mobile);
}

.blog-name-info h3 {
    color: var(--color-secondary);
    font-family: var(--font-opensans);
    font-size: var(--font-size-mobile-h3); 
    text-align: center;
}

.blog-name-info p { 
    color: var(--color-secondary);
    font-family: var(--font-roboto);
    font-size: var(--font-size-mobile-copy);
}

.blog-name-info :last-child {
    margin-top: 24px;
    margin-bottom: 52px;
}

.thumbnail-imageGrid {
    max-width: calc(100% - 5rem); 
    margin: 0 auto;
    display: grid;
    grid-row-gap: var(--margin-between-content-mobile-tablet); /* Vertical gap, remove comment later */
    grid-column-gap: 3rem; /* Horizontal gap, remove comment later */
    justify-items: center;
    align-items: center;
}

.blog-post-thumbnail {
    width: 100%; 
    height: 380px; 
    background-color: var(--container-color);
    display: flex; 
    flex-direction: column; 
    position: relative;
    margin-bottom: 1rem; 
}

.grid-image-container {
    width: 100%;
    height: 130px;/*115px;*/
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative; 
}

.grid-image-container a {
    display: flex;
    width: 100%;
    height: 100%;
    justify-content: center;
    align-items: center;
    position: absolute;
    top: 0;
    left: 0;
}

.grid-image-container img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.blog-post-title {
    color: var(--color-tertiary);
    text-align: center;
    font-family: var(--font-opensans);
    font-size: var(--font-size-mobile-h3);
    word-wrap: break-word;
    margin: 1.25rem 1rem 0 1rem;
}

.banner-images .button {
    position: absolute;
    bottom: 25px;
    left: 50%;
    transform: translate(-50%, -50%);
}

.blog-post-thumbnail .button {
    position: absolute;
    bottom: 10px;
    left: 50%;
    transform: translate(-50%, -50%);
}

.follow-subscribe-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin: var(--margin-between-content-mobile-tablet) var(--margin-mobile);
}

.follow-us-container, .subscribe-container {
    width: 100%;
}

.heading-container {
    text-align: center;
    background-color: var(--color-tertiary);
    color: var(--color-primary);
    padding: 4px 0;
}

.follow-us-icons {
    text-align: center;
    margin-top: 20px;
    margin-bottom: 80px;
}

.follow-us-icons i {
    font-size: 24px;
    margin: 0 18px;
    cursor: pointer;
}

.subscribe-container {
    position: relative;
}

.subscribe-form-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.subscribe-form-container form {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center; 
    box-sizing: border-box;
}

.subscribe-form-container input {
    color: var(--color-tertiary);
    width: 100%;
    border: 1px solid var(--color-tertiary);
    padding: 12px 8px;
    cursor: text;
    resize: none;
    margin-bottom: 20px;
}

.subscribe-container .button {
    width: auto;
}

